# schuaro

./: .gitignore  Dockerfile  README.md  deployment.yml  docker-compose.debug.yml  docker-compose.yml  example_config.yml  hypercorn.toml  install.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat
client/js/: schuaro.js
config/: example_config.yml  hypercorn.toml  requirements.txt
example/: __init__.py  __main__.py
example/templates/: index.html
examples/python_client/: main.py
login/: package.json  rollup.config.js
login/src/: App.scss  App.svelte
login/src/components/: Button.svelte  TextBox.scss  TextBox.svelte  button.scss
schuaro/: __init__.py  __main__.py  about.py  config.py  database.py  utilities.py
schuaro/app/: __init__.py
schuaro/auth/: __init__.py
schuaro/client/: __init__.py  response.html
schuaro/clients/: __init__.py  utils.py
schuaro/config/: __init__.py
schuaro/data/: __init__.py  database.py  redis.py  rep.py
schuaro/error/: __init__.py
schuaro/errors/: __init__.py
schuaro/login/: __init__.py  authcode.py  grants.py  permissions.py  scheme.py  utils.py
schuaro/party/: __init__.py
schuaro/users/: __init__.py  authcode.py  db.py  glob.py  grants.py  permissions.py  util.py  utils.py
schuaro/utilities/: __init__.py  global_classes.py
static/: login.css  socket.io.js
templates/: login.html  login.html.old  party_test.html  party_test_callback.html
