[tool.poetry]
name = "schuaro"
version = "0.0.1"
description = ""
authors = ["Riley Wilton <meetingprince34@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
redis = "^3.5.3"
Hypercorn = {extras = ["h3"], version = "^0.11.2"}
pymongo = "^3.11.4"
PyYAML = "^5.4.1"
databases = {extras = ["sqlite", "mysql", "postgresql"], version = "^0.4.3"}
aiosqlite = "^0.17.0"
justredis = "^0.0.1-alpha.3"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
